# pt_followup

./: .gitignore  CMakeLists.txt  Requirements.md  architecture.wsd  imgui.ini
cmake/: Conan.cmake
src/: CMakeLists.txt  common.h  cuda_memory.hpp  cuda_wrapper.h  imgui_helpers.hpp  main.cpp  options.cpp
src/gui/: control.hpp  playerController.hpp  stats.hpp
src/scenes/: full_screen_opengl.cpp  full_screen_opengl.h  pt.cpp  pt.cu  pt.h  pt_math.h  sampler.h  sampler_curand.h  sampler_std.h
